Show a lobby screen in video rooms

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1009,6 +1009,13 @@
     "Your camera is turned off": "Your camera is turned off",
     "Your camera is still enabled": "Your camera is still enabled",
     "Dial": "Dial",
+    "Audio devices": "Audio devices",
+    "Mute microphone": "Mute microphone",
+    "Unmute microphone": "Unmute microphone",
+    "Video devices": "Video devices",
+    "Turn off camera": "Turn off camera",
+    "Turn on camera": "Turn on camera",
+    "Join video room now": "Join video room now",
     "Dialpad": "Dialpad",
     "Mute the microphone": "Mute the microphone",
     "Unmute the microphone": "Unmute the microphone",
