add beacon map and status chin
Signed-off-by: Kerry Archibald <kerrya@element.io>

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -2899,6 +2899,10 @@
     "Beta": "Beta",
     "Leave the beta": "Leave the beta",
     "Join the beta": "Join the beta",
+    "Loading live location...": "Loading live location...",
+    "Live location ended": "Live location ended",
+    "Live location enabled": "Live location enabled",
+    "View live location": "View live location",
     "An error occured whilst sharing your live location": "An error occured whilst sharing your live location",
     "You are sharing your live location": "You are sharing your live location",
     "%(timeRemaining)s left": "%(timeRemaining)s left",
