Show connected members on lobby screen

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1009,6 +1009,8 @@
     "Your camera is turned off": "Your camera is turned off",
     "Your camera is still enabled": "Your camera is still enabled",
     "Dial": "Dial",
+    "%(count)s people connected|other": "%(count)s people connected",
+    "%(count)s people connected|one": "%(count)s person connected",
     "Audio devices": "Audio devices",
     "Mute microphone": "Mute microphone",
     "Unmute microphone": "Unmute microphone",
@@ -1761,6 +1763,7 @@
     "Hide Widgets": "Hide Widgets",
     "Show Widgets": "Show Widgets",
     "Search": "Search",
+    "Invite": "Invite",
     "Start new chat": "Start new chat",
     "Invite to space": "Invite to space",
     "You do not have permissions to invite people to this space": "You do not have permissions to invite people to this space",
@@ -1785,7 +1788,6 @@
     "Explore all public rooms": "Explore all public rooms",
     "%(count)s results|other": "%(count)s results",
     "%(count)s results|one": "%(count)s result",
-    "Invite": "Invite",
     "Add space": "Add space",
     "You do not have permissions to add spaces to this space": "You do not have permissions to add spaces to this space",
     "Join public room": "Join public room",
