More 4S Security Key => Recovery key

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1345,7 +1345,7 @@
     "Set up": "Set up",
     "well formed": "well formed",
     "unexpected type": "unexpected type",
-    "Back up your encryption keys with your account data in case you lose access to your devices. Your keys will be secured with a unique Security Key.": "Back up your encryption keys with your account data in case you lose access to your devices. Your keys will be secured with a unique Security Key.",
+    "Back up your secure messaging keys with your account data in case you lose access to your devices. Your keys will be secured with a recovery key.": "Back up your secure messaging keys with your account data in case you lose access to your devices. Your keys will be secured with a recovery key.",
     "Backup key stored:": "Backup key stored:",
     "not stored": "not stored",
     "Backup key cached:": "Backup key cached:",
@@ -2612,11 +2612,11 @@
     "Leave all rooms": "Leave all rooms",
     "Leave some rooms": "Leave some rooms",
     "Leave space": "Leave space",
-    "Your Security Key is a safety net - you can use it to restore access to your encrypted messages if you forget your Security Phrase.": "Your Security Key is a safety net - you can use it to restore access to your encrypted messages if you forget your Security Phrase.",
+    "Your recovery key is a safety net - you can use it to restore access to your encrypted messages if you forget you lose access to your devices.": "Your recovery key is a safety net - you can use it to restore access to your encrypted messages if you forget you lose access to your devices.",
     "Keep a copy of it somewhere secure, like a password manager or even a safe.": "Keep a copy of it somewhere secure, like a password manager or even a safe.",
-    "Your Security Key": "Your Security Key",
-    "Your Security Key has been <b>copied to your clipboard</b>, paste it to:": "Your Security Key has been <b>copied to your clipboard</b>, paste it to:",
-    "Your Security Key is in your <b>Downloads</b> folder.": "Your Security Key is in your <b>Downloads</b> folder.",
+    "Your recovery key": "Your recovery key",
+    "Your recovery key has been <b>copied to your clipboard</b>, paste it to:": "Your recovery key has been <b>copied to your clipboard</b>, paste it to:",
+    "Your recovery key is in your <b>Downloads</b> folder.": "Your recovery key is in your <b>Downloads</b> folder.",
     "<b>Print it</b> and store it somewhere safe": "<b>Print it</b> and store it somewhere safe",
     "<b>Save it</b> on a USB key or backup drive": "<b>Save it</b> on a USB key or backup drive",
     "<b>Copy it</b> to your personal cloud storage": "<b>Copy it</b> to your personal cloud storage",
@@ -2790,17 +2790,17 @@
     "Remember this": "Remember this",
     "Wrong file type": "Wrong file type",
     "Looks good!": "Looks good!",
-    "Wrong Security Key": "Wrong Security Key",
-    "Invalid Security Key": "Invalid Security Key",
+    "Wrong recovery key": "Wrong recovery key",
+    "Invalid recovery key": "Invalid recovery key",
     "Forgotten or lost all recovery methods? <a>Reset all</a>": "Forgotten or lost all recovery methods? <a>Reset all</a>",
     "Reset everything": "Reset everything",
     "Only do this if you have no other device to complete verification with.": "Only do this if you have no other device to complete verification with.",
     "If you reset everything, you will restart with no trusted devices, no trusted users, and might not be able to see past messages.": "If you reset everything, you will restart with no trusted devices, no trusted users, and might not be able to see past messages.",
     "Security Phrase": "Security Phrase",
     "Unable to access secret storage. Please verify that you entered the correct Security Phrase.": "Unable to access secret storage. Please verify that you entered the correct Security Phrase.",
-    "Enter your Security Phrase or <button>use your Security Key</button> to continue.": "Enter your Security Phrase or <button>use your Security Key</button> to continue.",
-    "Security Key": "Security Key",
-    "Use your Security Key to continue.": "Use your Security Key to continue.",
+    "Enter your Security Phrase or <button>use your recovery key</button> to continue.": "Enter your Security Phrase or <button>use your recovery key</button> to continue.",
+    "Recovery key": "Recovery key",
+    "Use your recovery key to continue.": "Use your recovery key to continue.",
     "Destroy cross-signing keys?": "Destroy cross-signing keys?",
     "Deleting cross-signing keys is permanent. Anyone you have verified with will see security alerts. You almost certainly don't want to do this, unless you've lost every device you can cross-sign from.": "Deleting cross-signing keys is permanent. Anyone you have verified with will see security alerts. You almost certainly don't want to do this, unless you've lost every device you can cross-sign from.",
     "Clear cross-signing keys": "Clear cross-signing keys",
@@ -3255,6 +3255,8 @@
     "Go back to set it again.": "Go back to set it again.",
     "Enter your Security Phrase a second time to confirm it.": "Enter your Security Phrase a second time to confirm it.",
     "Repeat your Security Phrase...": "Repeat your Security Phrase...",
+    "Your Security Key is a safety net - you can use it to restore access to your encrypted messages if you forget your Security Phrase.": "Your Security Key is a safety net - you can use it to restore access to your encrypted messages if you forget your Security Phrase.",
+    "Your Security Key": "Your Security Key",
     "Your keys are being backed up (the first backup could take a few minutes).": "Your keys are being backed up (the first backup could take a few minutes).",
     "Without setting up Secure Message Recovery, you won't be able to restore your encrypted message history if you log out or use another device.": "Without setting up Secure Message Recovery, you won't be able to restore your encrypted message history if you log out or use another device.",
     "Set up Secure Message Recovery": "Set up Secure Message Recovery",
@@ -3265,9 +3267,9 @@
     "Success!": "Success!",
     "Create key backup": "Create key backup",
     "Unable to create key backup": "Unable to create key backup",
-    "Generate a Security Key": "Generate a Security Key",
-    "We'll generate a Security Key for you to store somewhere safe, like a password manager or a safe.": "We'll generate a Security Key for you to store somewhere safe, like a password manager or a safe.",
-    "Use a secret phrase only you know, and optionally save a Security Key to use for backup.": "Use a secret phrase only you know, and optionally save a Security Key to use for backup.",
+    "Generate a secure messaging recovery key": "Generate a secure messaging recovery key",
+    "We'll generate a secure messaging recovery key for you to store somewhere safe, like a password manager or a safe.": "We'll generate a secure messaging recovery key for you to store somewhere safe, like a password manager or a safe.",
+    "Use a secret phrase only you know, and optionally save a recovery key to use for backup.": "Use a secret phrase only you know, and optionally save a recovery key to use for backup.",
     "Safeguard against losing access to encrypted messages & data by backing up encryption keys on your server.": "Safeguard against losing access to encrypted messages & data by backing up encryption keys on your server.",
     "Enter your account password to confirm the upgrade:": "Enter your account password to confirm the upgrade:",
     "Restore your key backup to upgrade your encryption": "Restore your key backup to upgrade your encryption",
