Security key => Recovery key

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -3277,14 +3277,14 @@
     "You'll need to authenticate with the server to confirm the upgrade.": "You'll need to authenticate with the server to confirm the upgrade.",
     "Upgrade this device to allow it to verify other devices, granting them access to encrypted messages and marking them as trusted for other users.": "Upgrade this device to allow it to verify other devices, granting them access to encrypted messages and marking them as trusted for other users.",
     "Enter a security phrase only you know, as it's used to safeguard your data. To be secure, you shouldn't re-use your account password.": "Enter a security phrase only you know, as it's used to safeguard your data. To be secure, you shouldn't re-use your account password.",
-    "Store your Security Key somewhere safe, like a password manager or a safe, as it's used to safeguard your encrypted data.": "Store your Security Key somewhere safe, like a password manager or a safe, as it's used to safeguard your encrypted data.",
+    "Store your recovery key somewhere safe, like a password manager or a safe, as it's used to safeguard your encrypted data.": "Store your recovery key somewhere safe, like a password manager or a safe, as it's used to safeguard your encrypted data.",
     "Unable to query secret storage status": "Unable to query secret storage status",
     "If you cancel now, you may lose encrypted messages & data if you lose access to your logins.": "If you cancel now, you may lose encrypted messages & data if you lose access to your logins.",
     "You can also set up Secure Backup & manage your keys in Settings.": "You can also set up Secure Backup & manage your keys in Settings.",
     "Upgrade your encryption": "Upgrade your encryption",
     "Set a Security Phrase": "Set a Security Phrase",
     "Confirm Security Phrase": "Confirm Security Phrase",
-    "Save your Security Key": "Save your Security Key",
+    "Save your recovery key": "Save your recovery key",
     "Unable to set up secret storage": "Unable to set up secret storage",
     "Passphrases must match": "Passphrases must match",
     "Passphrase must not be empty": "Passphrase must not be empty",
