add basic sidebar container
Signed-off-by: Kerry Archibald <kerrya@element.io>

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -2916,6 +2916,7 @@
     "Live location ended": "Live location ended",
     "Live location error": "Live location error",
     "No live locations": "No live locations",
+    "View List": "View List",
     "An error occured whilst sharing your live location": "An error occured whilst sharing your live location",
     "You are sharing your live location": "You are sharing your live location",
     "%(timeRemaining)s left": "%(timeRemaining)s left",
