--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -2945,6 +2945,7 @@
     "View list": "View list",
     "View List": "View List",
     "Close sidebar": "Close sidebar",
+    "An error occurred while stopping your live location": "An error occurred while stopping your live location",
     "An error occured whilst sharing your live location": "An error occured whilst sharing your live location",
     "You are sharing your live location": "You are sharing your live location",
     "%(timeRemaining)s left": "%(timeRemaining)s left",
