--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1670,6 +1670,7 @@
     "Unencrypted": "Unencrypted",
     "Encrypted by a deleted session": "Encrypted by a deleted session",
     "The authenticity of this encrypted message can't be guaranteed on this device.": "The authenticity of this encrypted message can't be guaranteed on this device.",
+    "This message could not be decrypted": "This message could not be decrypted",
     "Sending your message...": "Sending your message...",
     "Encrypting your message...": "Encrypting your message...",
     "Your message was sent": "Your message was sent",
@@ -2074,7 +2075,7 @@
     "Last month": "Last month",
     "The beginning of the room": "The beginning of the room",
     "Jump to date": "Jump to date",
-    "This message cannot be decrypted": "This message cannot be decrypted",
+    "Unable to decrypt message": "Unable to decrypt message",
     "Downloading": "Downloading",
     "Decrypting": "Decrypting",
     "Download": "Download",
