Add a beta card for video rooms

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -868,6 +868,14 @@
     "Encryption": "Encryption",
     "Experimental": "Experimental",
     "Developer": "Developer",
+    "Video rooms": "Video rooms",
+    "A new way to chat over voice and video in Element.": "A new way to chat over voice and video in Element.",
+    "Video rooms are always-on VoIP channels embedded within a room in Element.": "Video rooms are always-on VoIP channels embedded within a room in Element.",
+    "How can I create a video room?": "How can I create a video room?",
+    "Use the “+” button in the room section of the left panel.": "Use the “+” button in the room section of the left panel.",
+    "Can I use text chat alongside the video call?": "Can I use text chat alongside the video call?",
+    "Yes, the chat timeline is displayed alongside the video.": "Yes, the chat timeline is displayed alongside the video.",
+    "Thank you for trying the beta, please go into as much detail as you can so we can improve it.": "Thank you for trying the beta, please go into as much detail as you can so we can improve it.",
     "Let moderators hide messages pending moderation.": "Let moderators hide messages pending moderation.",
     "Report to moderators prototype. In rooms that support moderation, the `report` button will let you report abuse to room moderators": "Report to moderators prototype. In rooms that support moderation, the `report` button will let you report abuse to room moderators",
     "Show options to enable 'Do not disturb' mode": "Show options to enable 'Do not disturb' mode",
@@ -882,9 +890,7 @@
     "How can I leave the beta?": "How can I leave the beta?",
     "To leave, return to this page and use the “%(leaveTheBeta)s” button.": "To leave, return to this page and use the “%(leaveTheBeta)s” button.",
     "Leave the beta": "Leave the beta",
-    "Thank you for trying the beta, please go into as much detail as you can so we can improve it.": "Thank you for trying the beta, please go into as much detail as you can so we can improve it.",
     "Custom user status messages": "Custom user status messages",
-    "Video rooms (under active development)": "Video rooms (under active development)",
     "Render simple counters in room header": "Render simple counters in room header",
     "Multiple integration managers (requires manual setup)": "Multiple integration managers (requires manual setup)",
     "Try out new ways to ignore people (experimental)": "Try out new ways to ignore people (experimental)",
