changed dash to em dash

--- a/src/i18n/strings/ar.json
+++ b/src/i18n/strings/ar.json
@@ -676,7 +676,7 @@
     "Discovery": "الاكتشاف",
     "Deactivate account": "تعطيل الحساب",
     "Deactivate Account": "تعطيل الحساب",
-    "Deactivating your account is a permanent action - be careful!": "يعد تعطيل حسابك إجراءً دائمًا - كن حذرًا!",
+    "Deactivating your account is a permanent action —— ßbe careful!": "يعد تعطيل حسابك إجراءً دائمًا - كن حذرًا!",
     "Account management": "إدارة الحساب",
     "Agree to the identity server (%(serverName)s) Terms of Service to allow yourself to be discoverable by email address or phone number.": "وافق على شروط خدمة خادم الهوية %(serverName)s لتكون قابلاً للاكتشاف عن طريق عنوان البريد الإلكتروني أو رقم الهاتف.",
     "Language and region": "اللغة والمنطقة",
