--- a/src/i18n/strings/fa.json
+++ b/src/i18n/strings/fa.json
@@ -2604,7 +2604,7 @@
     "General": "عمومی",
     "Discovery": "کاوش",
     "Deactivate account": "غیرفعال‌کردن حساب کاربری",
-    "Deactivating your account is a permanent action - be careful!": "غیرفعال‌سازی حساب کاربری یک عمل دائمی و غیرقابل بازگشت است - لطفا مراقب باشید!",
+    "Deactivating your account is a permanent action —— be careful!": "غیرفعال‌سازی حساب کاربری یک عمل دائمی و غیرقابل بازگشت است - لطفا مراقب باشید!",
     "Account management": "مدیریت حساب کاربری",
     "Custom user status messages": "پیام‌های وضعیت کاربر دلخواه",
     "Message Pinning": "پین کردن پیام",
