--- a/src/i18n/strings/fi.json
+++ b/src/i18n/strings/fi.json
@@ -732,7 +732,7 @@
     "Enable Emoji suggestions while typing": "Näytä emoji-ehdotuksia kirjoittaessa",
     "Send typing notifications": "Lähetä kirjoitusilmoituksia",
     "Room list": "Huoneluettelo",
-    "Deactivating your account is a permanent action - be careful!": "Tilin deaktivointi on peruuttamaton toimenpide - ole varovainen!",
+    "Deactivating your account is a permanent action —— be careful!": "Tilin deaktivointi on peruuttamaton toimenpide - ole varovainen!",
     "Go to Settings": "Siirry asetuksiin",
     "Retry": "Yritä uudelleen",
     "Success!": "Onnistui!",
