--- a/src/i18n/strings/ja.json
+++ b/src/i18n/strings/ja.json
@@ -1030,7 +1030,7 @@
     "Custom theme URL": "カスタムテーマURL",
     "Add theme": "テーマの追加",
     "Account management": "アカウントの管理",
-    "Deactivating your account is a permanent action - be careful!": "アカウントの無効化は取り消せません。注意してください！",
+    "Deactivating your account is a permanent action —— be careful!": "アカウントの無効化は取り消せません。注意してください！",
     "Deactivate account": "アカウントの無効化",
     "Room list": "ルーム一覧",
     "Timeline": "タイムライン",
