--- a/src/i18n/strings/kab.json
+++ b/src/i18n/strings/kab.json
@@ -1673,7 +1673,7 @@
     "Error downloading theme information.": "Tuccḍa deg usali n telɣut n usentel.",
     "Set the name of a font installed on your system & %(brand)s will attempt to use it.": "Sbadu isem n tsefsit yettwasbedden ɣef unagraw-ik·im & %(brand)s ad yeɛreḍ ad t-isseqdec.",
     "Appearance Settings only affect this %(brand)s session.": "Ala iɣewwaren n urwes i izemren ad beddlen kra deg tɣimit-a %(brand)s.",
-    "Deactivating your account is a permanent action - be careful!": "Asensi n umiḍan-inek·inem d ayen ara yilin i lebda - Ɣur-k·m!",
+    "Deactivating your account is a permanent action —— be careful!": "Asensi n umiḍan-inek·inem d ayen ara yilin i lebda - Ɣur-k·m!",
     "For help with using %(brand)s, click <a>here</a>.": "I tallalt n useqdec n %(brand)s, sit <a>dagi</a>.",
     "For help with using %(brand)s, click <a>here</a> or start a chat with our bot using the button below.": "I tallalt ɣef useqdec n %(brand)s, sit <a>dagi</a> neɣ bdu adiwenni d wabuṭ-nneɣ s useqdec n tqeffalt ddaw.",
     "To report a Matrix-related security issue, please read the Matrix.org <a>Security Disclosure Policy</a>.": "I wakken ad d-tazneḍ ugur n tɣellist i icudden ɣer Matrix, ttxil-k·m ɣer <a>tasertit n ukcaf n tɣellist</a> deg Matrix.org.",
