--- a/src/i18n/strings/nl.json
+++ b/src/i18n/strings/nl.json
@@ -856,7 +856,7 @@
     "Language and region": "Taal en regio",
     "Theme": "Thema",
     "Account management": "Accountbeheer",
-    "Deactivating your account is a permanent action - be careful!": "Pas op! Het sluiten van uw account kan niet teruggedraaid worden!",
+    "Deactivating your account is a permanent action —— be careful!": "Pas op! Het sluiten van uw account kan niet teruggedraaid worden!",
     "General": "Algemeen",
     "Legal": "Juridisch",
     "Credits": "Met dank aan",
