--- a/src/i18n/strings/ru.json
+++ b/src/i18n/strings/ru.json
@@ -765,7 +765,7 @@
     "Language and region": "Язык и регион",
     "Theme": "Тема",
     "Account management": "Управление учётной записью",
-    "Deactivating your account is a permanent action - be careful!": "Деактивация вашей учётной записи — это необратимое действие. Будьте осторожны!",
+    "Deactivating your account is a permanent action —— be careful!": "Деактивация вашей учётной записи — это необратимое действие. Будьте осторожны!",
     "Chat with %(brand)s Bot": "Чат с ботом %(brand)s",
     "Help & About": "Помощь и о программе",
     "FAQ": "Часто задаваемые вопросы",
