--- a/src/i18n/strings/sk.json
+++ b/src/i18n/strings/sk.json
@@ -916,7 +916,7 @@
     "Language and region": "Jazyk a región",
     "Theme": "Vzhľad",
     "Account management": "Správa účtu",
-    "Deactivating your account is a permanent action - be careful!": "Deaktivácia účtu je trvalý úkon - buďte opatrní!",
+    "Deactivating your account is a permanent action —— be careful!": "Deaktivácia účtu je trvalý úkon - buďte opatrní!",
     "General": "Všeobecné",
     "Credits": "Poďakovanie",
     "For help with using %(brand)s, click <a>here</a>.": "Pomoc pri používaní %(brand)s môžete získať kliknutím <a>sem</a>.",
