--- a/src/i18n/strings/sq.json
+++ b/src/i18n/strings/sq.json
@@ -830,7 +830,7 @@
     "Language and region": "Gjuhë dhe rajon",
     "Theme": "Temë",
     "Account management": "Administrim llogarish",
-    "Deactivating your account is a permanent action - be careful!": "Çaktivizimi i llogarisë tuaj është një veprim i pakthyeshëm - hapni sytë!",
+    "Deactivating your account is a permanent action —— be careful!": "Çaktivizimi i llogarisë tuaj është një veprim i pakthyeshëm - hapni sytë!",
     "For help with using %(brand)s, click <a>here</a>.": "Për ndihmë rreth përdorimit të %(brand)s-it, klikoni <a>këtu</a>.",
     "For help with using %(brand)s, click <a>here</a> or start a chat with our bot using the button below.": "Për ndihmë rreth përdorimit të %(brand)s-it, klikoni <a>këtu</a>, ose nisni një fjalosje me robotin tonë duke përdorur butonin më poshtë.",
     "Help & About": "Ndihmë & Rreth",
