--- a/src/i18n/strings/uk.json
+++ b/src/i18n/strings/uk.json
@@ -436,7 +436,7 @@
     "Decline (%(counter)s)": "Відхилити (%(counter)s)",
     "Language and region": "Мова та регіон",
     "Account management": "Керування обліковим записом",
-    "Deactivating your account is a permanent action - be careful!": "Деактивація вашого облікового запису безповоротна — будьте обережні!",
+    "Deactivating your account is a permanent action —— be careful!": "Деактивація вашого облікового запису безповоротна — будьте обережні!",
     "Deactivate Account": "Деактивувати обліковий запис",
     "Deactivate account": "Деактивувати обліковий запис",
     "Legal": "Правова інформація",
