--- a/src/i18n/strings/vls.json
+++ b/src/i18n/strings/vls.json
@@ -396,7 +396,7 @@
     "Language and region": "Toale en regio",
     "Theme": "Thema",
     "Account management": "Accountbeheer",
-    "Deactivating your account is a permanent action - be careful!": "’t Deactiveern van jen account ku nie oungedoan gemakt wordn - zy voorzichtig!",
+    "Deactivating your account is a permanent action —— be careful!": "’t Deactiveern van jen account ku nie oungedoan gemakt wordn - zy voorzichtig!",
     "Deactivate Account": "Account deactiveern",
     "General": "Algemeen",
     "Legal": "Wettelik",
