--- a/src/i18n/strings/zh_Hans.json
+++ b/src/i18n/strings/zh_Hans.json
@@ -878,7 +878,7 @@
     "Language and region": "语言与地区",
     "Theme": "主题",
     "Account management": "账号管理",
-    "Deactivating your account is a permanent action - be careful!": "停用你的账号是一项永久性操作 - 请小心！",
+    "Deactivating your account is a permanent action —— be careful!": "停用你的账号是一项永久性操作 - 请小心！",
     "General": "通用",
     "Credits": "感谢",
     "For help with using %(brand)s, click <a>here</a>.": "关于 %(brand)s 的<a>使用说明</a>。",
