--- a/src/i18n/strings/bg.json
+++ b/src/i18n/strings/bg.json
@@ -837,7 +837,7 @@
     "Language and region": "Език и регион",
     "Theme": "Тема",
     "Account management": "Управление на акаунта",
-    "Deactivating your account is a permanent action - be careful!": "Деактивирането на акаунта е необратимо действие - внимавайте!",
+    "Deactivating your account is a permanent action —— be careful!": "Деактивирането на акаунта е необратимо действие - внимавайте!",
     "For help with using %(brand)s, click <a>here</a>.": "За помощ при използването на %(brand)s, кликнете <a>тук</a>.",
     "For help with using %(brand)s, click <a>here</a> or start a chat with our bot using the button below.": "За помощ при използването на %(brand)s, кликнете <a>тук</a> или започнете чат с бота ни използвайки бутона по-долу.",
     "Chat with %(brand)s Bot": "Чати с %(brand)s Bot",
