--- a/src/i18n/strings/gl.json
+++ b/src/i18n/strings/gl.json
@@ -1212,7 +1212,7 @@
     "Set a new account password...": "Establecer novo contrasinal da conta...",
     "Agree to the identity server (%(serverName)s) Terms of Service to allow yourself to be discoverable by email address or phone number.": "Acepta os Termos do Servizo do servidor (%(serverName)s) para permitir que te atopen polo enderezo de email ou número de teléfono.",
     "Account management": "Xestión da conta",
-    "Deactivating your account is a permanent action - be careful!": "A desactivación da conta será permanente - ten coidado!",
+    "Deactivating your account is a permanent action —— be careful!": "A desactivación da conta será permanente - ten coidado!",
     "Credits": "Créditos",
     "Chat with %(brand)s Bot": "Chat co Bot %(brand)s",
     "Bug reporting": "Informar de fallos",
