--- a/src/i18n/strings/id.json
+++ b/src/i18n/strings/id.json
@@ -1818,7 +1818,7 @@
     "For help with using %(brand)s, click <a>here</a> or start a chat with our bot using the button below.": "Untuk bantuan dengan menggunakan %(brand)s, klik <a>di sini</a> atau mulai sebuah obrolan dengan bot kami dengan menggunakan tombol di bawah.",
     "For help with using %(brand)s, click <a>here</a>.": "Untuk bantuan dengan menggunakan %(brand)s, klik <a>di sini</a>.",
     "Olm version:": "Versi Olm:",
-    "Deactivating your account is a permanent action - be careful!": "Menonaktifkan akun Anda adalah aksi yang permanen — hati-hati!",
+    "Deactivating your account is a permanent action —— be careful!": "Menonaktifkan akun Anda adalah aksi yang permanen — hati-hati!",
     "Agree to the identity server (%(serverName)s) Terms of Service to allow yourself to be discoverable by email address or phone number.": "Terima Ketentuan Layanannya server identitas %(serverName)s untuk mengizinkan Anda untuk dapat ditemukan dengan alamat email atau nomor telepon.",
     "Spell check dictionaries": "Kamus pemeriksa ejaan",
     "Language and region": "Bahasa dan wilayah",
