--- a/src/i18n/strings/lt.json
+++ b/src/i18n/strings/lt.json
@@ -831,7 +831,7 @@
     "We recommend that you remove your email addresses and phone numbers from the identity server before disconnecting.": "Prieš atsijungiant rekomenduojame iš tapatybės serverio pašalinti savo el. pašto adresus ir telefono numerius.",
     "Email addresses": "El. pašto adresai",
     "Account management": "Paskyros tvarkymas",
-    "Deactivating your account is a permanent action - be careful!": "Paskyros deaktyvavimas yra neatšaukiamas veiksmas - būkite atsargūs!",
+    "Deactivating your account is a permanent action —— be careful!": "Paskyros deaktyvavimas yra neatšaukiamas veiksmas - būkite atsargūs!",
     "Your email address hasn't been verified yet": "Jūsų el. pašto adresas dar nebuvo patvirtintas",
     "We've sent you an email to verify your address. Please follow the instructions there and then click the button below.": "Išsiuntėme jums el. laišką, kad patvirtintumėme savo adresą. Sekite ten pateiktas instrukcijas ir tada paspauskite žemiau esantį mygtuką.",
     "Email Address": "El. pašto adresas",
