--- a/src/i18n/strings/vi.json
+++ b/src/i18n/strings/vi.json
@@ -1937,7 +1937,7 @@
     "Discovery": "Khám phá",
     "Deactivate account": "Vô hiệu hoá tài khoản",
     "Deactivate Account": "Hủy kích hoạt Tài khoản",
-    "Deactivating your account is a permanent action - be careful!": "Hủy kích hoạt tài khoản của bạn là một hành động vĩnh viễn - hãy cẩn thận!",
+    "Deactivating your account is a permanent action —— be careful!": "Hủy kích hoạt tài khoản của bạn là một hành động vĩnh viễn - hãy cẩn thận!",
     "Account management": "Quản lý tài khoản",
     "Agree to the identity server (%(serverName)s) Terms of Service to allow yourself to be discoverable by email address or phone number.": "Đồng ý với Điều khoản dịch vụ của máy chủ nhận dạng (%(serverName)s) để cho phép bạn có thể được tìm kiếm bằng địa chỉ email hoặc số điện thoại của bạn.",
     "Spell check dictionaries": "Từ điển kiểm tra chính tả",
